InternexDev_Sandbox/src/objects/IUF__c.object
<CustomObject>
    <fields>
        <fullName>Applied_Amount__c</fullName>
        <formula>Payment_Line__r.akritiv__Applied_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Applied Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>IUFs</relationshipLabel>
        <relationshipName>IUFs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Closing_IUF_Retained__c</fullName>
        <formula>Opening_IUF_Retained__c + (IUF_Retained__c - IUF_used__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing IUF Reserve Retained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>$Setup.BusinessTransactionDate__c.Business_Transaction_Date__c</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIU_Released__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&apos;Manual&apos;),ABS(0),ABS(Applied_Amount__c -(IUF_Retained__c + Applied_Fee__c + Interest_Due_Recovered__c + UL_Fee_Due_Recovered__c ))) 

/* ABS(Applied_Amount__c - (IUF_Retained__c + Applied_Fee__c)) */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Balance Released</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IUF_Retained__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IUF Reserve Retained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IUF_used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IUF Reserve Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Due_Recovered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Accrued</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opening_IUF_Retained__c</fullName>
        <label>Opening IUF Reserve Retained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Line_Item__c</fullName>
        <label>Payment Line Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Line</label>
        <referenceTo>akritiv__Payment_Line__c</referenceTo>
        <relationshipLabel>IUFs</relationshipLabel>
        <relationshipName>IUFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <label>Payments</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Fee_Due_Recovered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UL Fee Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Un_Used_Line_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UL Fee Accrued</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>IUF</label>
    <nameField>
        <displayFormat>IUF-{00000}</displayFormat>
        <label>IUF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IUFs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_on_Due_Recovered_and_IUF</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c,&apos;Manual&apos;)&amp;&amp;IUF_Retained__c &gt; 0 &amp;&amp; (Interest_Due_Recovered__c &gt; 0 || UL_Fee_Due_Recovered__c &gt; 0)&amp;&amp; IUF_Retained__c != (Interest_Due_Recovered__c +  UL_Fee_Due_Recovered__c)</errorConditionFormula>
        <errorMessage>Retained Amount must be equal to Sum of Interest Due Recovered and UL Fee Due Recovered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_IUF</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c,&apos;Manual&apos;)&amp;&amp; IF(UL_Fee_Due_Recovered__c==0&amp;&amp; Interest_Due_Recovered__c==0,IUF_Retained__c &gt; Client_Account__r.Additional_IUF_Required__c,IUF_Retained__c &gt; (Client_Account__r.Additional_IUF_Required__c +   BLANKVALUE(Client_Account__r.Interest_Due__c,0)+  BLANKVALUE(Client_Account__r.UL_Fee_Due__c,0)))</errorConditionFormula>
        <errorMessage>Retained amount should be less than the Client-Account IUF Reserve Shortfall.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Negative_number</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c,&apos;Manual&apos;) &amp;&amp;  (IUF_Retained__c &lt; 0 ||  UL_Fee_Due_Recovered__c &lt;0 || IUF_Retained__c &lt; 0)</errorConditionFormula>
        <errorMessage>Please enter the Positive Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Update</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW())&amp;&amp;ISPICKVAL(Type__c,&apos;Manual&apos;)&amp;&amp;((PRIORVALUE(IUF_Retained__c)!=  IUF_Retained__c)||(PRIORVALUE(Interest_Due_Recovered__c)!=  Interest_Due_Recovered__c)||(PRIORVALUE(UL_Fee_Due_Recovered__c)!= UL_Fee_Due_Recovered__c))</errorConditionFormula>
        <errorMessage>You can not modify the existing record.Please create the new IUF.</errorMessage>
    </validationRules>
</CustomObject>